# proven-2pc

./: .gitignore  Cargo.toml  DESIGN.md  LAYERS.md  README.md
crates/coordinator/: Cargo.toml
crates/coordinator/examples/: distributed_transaction.rs
crates/coordinator/src/: coordinator.rs  error.rs  executor.rs  lib.rs  responses.rs  speculation.rs  transaction.rs
crates/coordinator/src/executor/: adhoc.rs  common.rs  mod.rs  read_only.rs  read_write.rs
crates/coordinator/src/speculation/: args.rs  learning.rs  mod.rs  prediction_context.rs  predictor.rs  template.rs
crates/coordinator/tests/: distributed_transaction.rs
crates/engine/: Cargo.toml
crates/engine/src/: client.rs  engine.rs  lib.rs  message.rs  stream.rs
crates/kv/: Cargo.toml
crates/kv/examples/: benchmark_concurrent_gets.rs  benchmark_gets.rs  benchmark_puts.rs
crates/kv/src/: engine.rs  lib.rs
crates/kv/src/coordinator/: client.rs  mod.rs
crates/kv/src/storage/: entity.rs  lock.rs  lock_persistence.rs  mod.rs  mvcc.rs
crates/kv/src/stream/: deferred.rs  engine.rs  message.rs  mod.rs  operation.rs  processor.rs  response.rs  test.rs  transaction.rs
crates/kv/src/types/: change_data.rs  mod.rs  operation.rs  value.rs
crates/kv/tests/: integration_test.rs  snapshot_test.rs
crates/mvcc/: Cargo.toml
crates/mvcc/src/: bucket_manager.rs  config.rs  encoding.rs  entity.rs  error.rs  history.rs  iterator.rs  lib.rs  storage.rs  uncommitted.rs
crates/queue/: Cargo.toml
crates/queue/examples/: benchmark_enqueues.rs
crates/queue/src/: engine.rs  entity.rs  lib.rs
crates/queue/src/coordinator/: client.rs  mod.rs
crates/queue/src/storage/: entity.rs  lock.rs  lock_persistence.rs  mod.rs  mvcc.rs
crates/queue/src/stream/: engine.rs  mod.rs  operation.rs  response.rs  transaction.rs
crates/queue/src/types/: change_data.rs  mod.rs  operation.rs  response.rs  value.rs
crates/queue/tests/: integration_test.rs  snapshot_test.rs
crates/resource/: Cargo.toml
crates/resource/examples/: benchmark_transfers.rs
crates/resource/src/: engine.rs  lib.rs
crates/resource/src/coordinator/: client.rs  mod.rs
crates/resource/src/storage/: entity.rs  lock_persistence.rs  mod.rs  mvcc.rs  reservation.rs
crates/resource/src/stream/: engine.rs  mod.rs  operation.rs  response.rs  transaction.rs
crates/resource/src/types/: change_data.rs  mod.rs  operation.rs  response.rs  value.rs
crates/resource/tests/: concurrency_safety_test.rs  integration_test.rs  snapshot_test.rs
crates/runner/: Cargo.toml
crates/runner/src/: cluster_view.rs  error.rs  heartbeat.rs  lib.rs  messages.rs  orchestration.rs  processor.rs  runner.rs
crates/runner/tests/: integration_tests.rs
crates/snapshot-file/: Cargo.toml
crates/snapshot-file/src/: lib.rs
crates/sql/: Cargo.toml
crates/sql/examples/: benchmark_concurrent_selects.rs  benchmark_inserts.rs  benchmark_inserts_direct.rs  benchmark_selects.rs  stream_processing.rs
crates/sql/src/: engine.rs  error.rs  lib.rs
crates/sql/src/coercion/: collection.rs  mod.rs  numeric.rs  special.rs  string.rs  temporal.rs  tests.rs  value.rs
crates/sql/src/coordinator/: client.rs  mod.rs
crates/sql/src/engine/: predicate_index.rs  stats_cache.rs
crates/sql/src/execution/: aggregator.rs  delete.rs  executor.rs  expression.rs  helpers.rs  insert.rs  join.rs  mod.rs  parameters.rs  select.rs  update.rs
crates/sql/src/functions/: abs.rs  append.rs  array_agg.rs  avg.rs  avg_distinct.rs  calc_distance.rs  cast.rs  ceil.rs  coalesce.rs  concat.rs  contains.rs  count.rs  count_distinct.rs  current_date.rs  current_time.rs  current_timestamp.rs  dedup.rs  distinct.rs  entries.rs  extract.rs  fields.rs  find_idx.rs  flatten.rs  from_entries.rs  generate_uuid.rs  get_x.rs  get_y.rs  greatest.rs  ifnull.rs  is_empty.rs  keys.rs  least.rs  length.rs  lower.rs  math.rs  max.rs  max_distinct.rs  merge.rs  min.rs  min_distinct.rs  (+25 more)
crates/sql/src/operators/: add.rs  and.rs  bitwise_and.rs  bitwise_not.rs  bitwise_or.rs  bitwise_shift_left.rs  bitwise_shift_right.rs  bitwise_xor.rs  concat.rs  divide.rs  equal.rs  exponentiate.rs  factorial.rs  greater_than.rs  greater_than_equal.rs  helpers.rs  identity.rs  ilike.rs  less_than.rs  less_than_equal.rs  like.rs  mixed_ops.rs  mod.rs  multiply.rs  negate.rs  not.rs  not_equal.rs  or.rs  remainder.rs  subtract.rs  traits.rs  xor.rs
crates/sql/src/parser/: lexer.rs
crates/sql/src/parsing/: ast.rs  caching_parser.rs  lexer.rs  mod.rs  parser.rs  test_foreign_key_parser.rs
crates/sql/src/planner/: mod.rs  optimizer.rs
crates/sql/src/planning/: aggregate_planner.rs  aggregate_utils.rs  mod.rs  (+13 more)
crates/sql/tests/: advanced_index_features.rs  aggregate.rs  aggregate_avg.rs  aggregate_count.rs  aggregate_expr.rs  aggregate_group_by.rs  aggregate_max.rs  aggregate_min.rs  aggregate_stdev.rs  aggregate_sum.rs  aggregate_variance.rs  alter.rs  alter_alter_table.rs  alter_create_table.rs  alter_drop_table.rs  arithmetic.rs  arithmetic_error.rs  arithmetic_on_where.rs  arithmetic_project.rs  array.rs  basic.rs  bitwise.rs  bitwise_and.rs  bitwise_shift_left.rs  bitwise_shift_right.rs  case.rs  cast.rs  column_alias.rs  composite_index_integration.rs  composite_range_scan.rs  concat.rs  data_type.rs  data_type_array.rs  data_type_bytea.rs  data_type_date.rs  data_type_decimal.rs  data_type_float32.rs  data_type_float64.rs  data_type_identity.rs  data_type_inet.rs  (+116 more)
crates/sql/tests_old/: example_join_test.rs  join_integration.rs  simple_snapshot_test.rs  snapshot_test.rs  statistics_optimization.rs.bak  test_ddl_refactor.rs
crates/stream/: Cargo.toml
crates/stream/examples/: benchmark_appends.rs
crates/stream/src/: batch.rs  deferred.rs  dispatcher.rs  engine.rs  error.rs  kernel.rs  lib.rs  processor.rs  recovery.rs  response.rs  router.rs  test.rs  test_utils.rs  wound_wait_tests.rs
crates/stream/tests/: basic_operations.rs  integration_test.rs  wound_wait.rs
crates/value/: Cargo.toml
crates/value/src/: codec.rs  identity.rs  interval.rs  lib.rs  mvcc.rs  point.rs  private_key.rs  public_key.rs  types.rs  vault.rs
(+361 files in other folders)
