[workspace]
members = [
    "crates/coordinator",
    "crates/engine",
    "crates/hlc",
    "crates/kv",
    "crates/queue",
    "crates/resource",
    "crates/sql",
    "crates/stream",
]
default-members = [
    ".",  # Include root package for examples
    "crates/coordinator",
    "crates/engine",
    "crates/hlc",
    "crates/kv",
    "crates/queue",
    "crates/resource",
    "crates/sql",
    "crates/stream",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# External dependencies
async-stream = "0.3"
async-trait = "0.1"
bytes = { version = "1.7", features = ["serde"] }
futures = "0.3"
hex = "0.4"
parking_lot = "0.12"
regex = "1.10"
rust_decimal = { version = "1.32", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# Internal crates
proven-coordinator = { path = "crates/coordinator" }
proven-engine = { path = "crates/engine" }
proven-hlc = { path = "crates/hlc" }
proven-kv = { path = "crates/kv" }
proven-queue = { path = "crates/queue" }
proven-resource = { path = "crates/resource" }
proven-sql = { path = "crates/sql" }
proven-stream = { path = "crates/stream" }

[package]
name = "proven-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
proven-coordinator = { workspace = true }
proven-engine = { workspace = true }
proven-hlc = { workspace = true }
proven-kv = { workspace = true }
proven-queue = { workspace = true }
proven-resource = { workspace = true }
proven-sql = { workspace = true }
proven-stream = { workspace = true }
tokio = { workspace = true }

[[example]]
name = "distributed_transaction"
path = "examples/distributed_transaction.rs"
