[workspace]
members = [
    "crates/common",
    "crates/coordinator",
    "crates/engine",
    "crates/hlc",
    "crates/kv",
    "crates/kv-client",
    "crates/queue",
    "crates/queue-client",
    "crates/resource",
    "crates/resource-client",
    "crates/runner",
    "crates/snapshot",
    "crates/snapshot-file",
    "crates/snapshot-memory",
    "crates/sql",
    "crates/sql-client",
    "crates/stream",
]
default-members = [
    ".",  # Include root package for examples
    "crates/common",
    "crates/coordinator",
    "crates/engine",
    "crates/hlc",
    "crates/kv",
    "crates/kv-client",
    "crates/queue",
    "crates/queue-client",
    "crates/resource",
    "crates/resource-client",
    "crates/runner",
    "crates/snapshot",
    "crates/snapshot-file",
    "crates/snapshot-memory",
    "crates/sql",
    "crates/sql-client",
    "crates/stream",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# External dependencies
async-stream = "0.3"
async-trait = "0.1"
bytes = { version = "1.7", features = ["serde"] }
ciborium = "0.2"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
flume = "0.11.1"
futures = "0.3"
hex = "0.4"
lru = "0.16.1"
parking_lot = "0.12"
regex = "1.10"
rust_decimal = { version = "1.38.0", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive", "rc"] }
serde_json = "1.0.145"
sha2 = "0.10"
thiserror = "2.0.16"
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zstd = "0.13"

# Internal crates
proven-common = { path = "crates/common" }
proven-coordinator = { path = "crates/coordinator" }
proven-engine = { path = "crates/engine" }
proven-hlc = { path = "crates/hlc" }
proven-kv = { path = "crates/kv" }
proven-kv-client = { path = "crates/kv-client" }
proven-queue = { path = "crates/queue" }
proven-queue-client = { path = "crates/queue-client" }
proven-resource = { path = "crates/resource" }
proven-resource-client = { path = "crates/resource-client" }
proven-runner = { path = "crates/runner" }
proven-snapshot = { path = "crates/snapshot" }
proven-snapshot-file = { path = "crates/snapshot-file" }
proven-snapshot-memory = { path = "crates/snapshot-memory" }
proven-sql = { path = "crates/sql" }
proven-sql-client = { path = "crates/sql-client" }
proven-stream = { path = "crates/stream" }

[package]
name = "proven-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
proven-common.workspace = true
proven-coordinator.workspace = true
proven-engine.workspace = true
proven-hlc.workspace = true
proven-kv.workspace = true
proven-kv-client.workspace = true
proven-queue.workspace = true
proven-queue-client.workspace = true
proven-resource.workspace = true
proven-resource-client.workspace = true
proven-runner.workspace = true
proven-snapshot-memory.workspace = true
proven-sql.workspace = true
proven-sql-client.workspace = true
proven-stream.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[example]]
name = "distributed_transaction"
path = "examples/distributed_transaction.rs"
