[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/common",
    "crates/coordinator",
    "crates/engine",
    "crates/kv",
    "crates/kv-client",
    "crates/mvcc",
    "crates/protocol",
    "crates/queue",
    "crates/queue-client",
    "crates/resource",
    "crates/resource-client",
    "crates/runner",
    "crates/sql",
    "crates/sql-client",
    "crates/stream",
    "crates/value",
]
default-members = [
    ".",  # Include root package for examples
    "crates/common",
    "crates/coordinator",
    "crates/engine",
    "crates/kv",
    "crates/kv-client",
    "crates/mvcc",
    "crates/protocol",
    "crates/queue",
    "crates/queue-client",
    "crates/resource",
    "crates/resource-client",
    "crates/runner",
    "crates/sql",
    "crates/sql-client",
    "crates/stream",
    "crates/value",
]
resolver = "2"

[workspace.dependencies]
# External dependencies
async-stream = "0.3"
async-trait = "0.1"
bytes = { version = "1.7", features = ["serde"] }
ciborium = "0.2"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
fjall = { version = "2.11.2", default-features = false, features = ["lz4"] }
flume = "0.11.1"
futures = "0.3"
hex = "0.4"
indexmap = "2.12.0"
lru = "0.16.2"
parking_lot = "0.12.5"
rand = "=0.8.5"
regex = "1.12.2"
rust_decimal = { version = "1.39.0", features = ["serde-str"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sha2 = "0.10"
tempfile = "3.8"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
zstd = "0.13"

# Internal crates
proven-common = { path = "crates/common" }
proven-coordinator = { path = "crates/coordinator" }
proven-engine = { path = "crates/engine" }
proven-kv = { path = "crates/kv" }
proven-kv-client = { path = "crates/kv-client" }
proven-mvcc = { path = "crates/mvcc" }
proven-protocol = { path = "crates/protocol" }
proven-queue = { path = "crates/queue" }
proven-queue-client = { path = "crates/queue-client" }
proven-resource = { path = "crates/resource" }
proven-resource-client = { path = "crates/resource-client" }
proven-runner = { path = "crates/runner" }
proven-sql = { path = "crates/sql" }
proven-sql-client = { path = "crates/sql-client" }
proven-stream = { path = "crates/stream" }
proven-value = { path = "crates/value" }

[package]
name = "proven-examples"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
proven-common.workspace = true
proven-coordinator.workspace = true
proven-engine.workspace = true
proven-kv.workspace = true
proven-kv-client.workspace = true
proven-queue.workspace = true
proven-queue-client.workspace = true
proven-resource.workspace = true
proven-resource-client.workspace = true
proven-runner.workspace = true
proven-sql.workspace = true
proven-sql-client.workspace = true
proven-stream.workspace = true
proven-value.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true

[[example]]
name = "distributed_transaction"
path = "examples/distributed_transaction.rs"
