[package]
name = "proven-coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
parking_lot.workspace = true
proven-engine.workspace = true
proven-hlc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
