[package]
name = "proven-coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.21"
crossbeam-queue = "0.3"
dashmap = "6.1.0"
parking_lot.workspace = true
proven-common.workspace = true
proven-engine.workspace = true
proven-hlc.workspace = true
proven-runner.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
