[package]
name = "proven-coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
proven-common.workspace = true
proven-engine.workspace = true
proven-hlc.workspace = true
proven-runner.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
