[package]
name = "proven-engine"
version.workspace = true
edition.workspace = true

[dependencies]
async-stream = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
proven-hlc = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proven-kv = { path = "../kv" }
proven-sql = { path = "../sql" }
