[package]
name = "proven-kv"
version.workspace = true
edition.workspace = true

[dependencies]
ciborium.workspace = true
parking_lot.workspace = true
proven-engine.workspace = true
proven-hlc.workspace = true
proven-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
zstd.workspace = true
