[package]
name = "proven-kv"
version.workspace = true
edition.workspace = true

[dependencies]
fjall.workspace = true
parking_lot.workspace = true
proven-common.workspace = true
proven-engine.workspace = true
proven-mvcc.workspace = true
proven-processor.workspace = true
proven-value = { workspace = true, features = ["mvcc"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
zstd.workspace = true
