[package]
name = "proven-mvcc"
version = "0.1.0"
edition = "2024"

[dependencies]
fjall = "2.6"
proven-hlc = { path = "../hlc" }
tempfile = "3.8"

# Optional: for blanket Encode/Decode impl
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
# Enable blanket impl for types that already use serde
serde-compat = ["bincode", "serde"]

[dev-dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.8"
