[package]
name = "proven-queue"
version.workspace = true
edition.workspace = true

[dependencies]
parking_lot.workspace = true
proven-common.workspace = true
proven-engine.workspace = true
proven-hlc.workspace = true
proven-mvcc.workspace = true
proven-stream.workspace = true
proven-value = { workspace = true, features = ["mvcc"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
zstd.workspace = true
