[package]
name = "proven-resource"
version.workspace = true
edition.workspace = true

[dependencies]
ciborium.workspace = true
proven-hlc.workspace = true
proven-common.workspace = true
proven-stream.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zstd.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
