[package]
name = "proven-resource"
version.workspace = true
edition.workspace = true

[dependencies]
parking_lot.workspace = true
proven-common.workspace = true
proven-engine.workspace = true
proven-mvcc.workspace = true
proven-stream.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
