[package]
name = "proven-runner"
version.workspace = true
edition.workspace = true

[dependencies]
parking_lot.workspace = true
proven-engine.workspace = true
proven-stream.workspace = true
proven-hlc.workspace = true
proven-kv.workspace = true
proven-queue.workspace = true
proven-resource.workspace = true
proven-sql.workspace = true
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
