[package]
name = "proven-runner"
version.workspace = true
edition.workspace = true

[dependencies]
parking_lot.workspace = true
proven-engine.workspace = true
proven-stream.workspace = true
proven-kv.workspace = true
proven-queue.workspace = true
proven-resource.workspace = true
proven-sql.workspace = true
proven-mvcc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
