[package]
name = "proven-snapshot-file"
version.workspace = true
edition.workspace = true

[dependencies]
proven-hlc.workspace = true
proven-snapshot = { path = "../snapshot" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
uuid.workspace = true