[package]
name = "proven-sql"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
ciborium.workspace = true
hex.workspace = true
lru.workspace = true
parking_lot.workspace = true
proven-engine.workspace = true
proven-hlc.workspace = true
proven-stream.workspace = true
regex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
