[package]
name = "proven-stream"
version.workspace = true
edition.workspace = true

[dependencies]
parking_lot.workspace = true
proven-engine.workspace = true
proven-hlc.workspace = true
proven-snapshot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
ciborium.workspace = true
proven-snapshot-memory.workspace = true
tokio-test.workspace = true
