[package]
name = "proven-stream"
version.workspace = true
edition.workspace = true

[dependencies]
ciborium.workspace = true
proven-common.workspace = true
proven-engine.workspace = true
proven-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
uuid.workspace = true
