[package]
name = "proven-value"
version.workspace = true
edition.workspace = true

[features]
default = []
mvcc = ["proven-mvcc"]

[dependencies]
chrono.workspace = true
hex.workspace = true
proven-mvcc = { workspace = true, optional = true }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
